<resources>
    <string name="app_name">Google image search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search image</string>

    <string name="pick_all_photo">All Photos</string>
    <string name="pick_photos">照片</string>
    <string name="pick_pick_cancel">取消</string>
    <string name="pick_preview">预览</string>
    <string name="pick_pick">选取</string>
    <string name="pick_pick_size">选取(%1$s)</string>
    <string name="pick_permissionRefuse">权限拒绝</string>
    <string name="pick_menu_cancel">取消</string>
    <string name="pick_photo_size">(%1$s)</string>
    <string name="pick_photo_size_limit">最多选择%1$s张图片</string>
    <string name="pick_select">确定</string>

    <string name="share">Share</string>
    <string name="share_to_moments">朋友圈</string>
    <string name="share_to_friend">好友</string>
    <string name="pref_size">Set image size</string>
    <string name="pref_type">Set image type</string>
    <string name="pref_type_default_val">photo</string>
    <string name="pref_size_default_val">m</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="downloads">Downloads</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delete_all">Delete</string>
    <string name="select_all">Select</string>
    <string name="image_select_title">Downloaded images</string>
    <string name="video_files">Videos</string>
    <string name="video_select_title">Videos</string>
</resources>
