<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_layout"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:visibility="gone"
    android:background="@drawable/pick_bg"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/tv_preview_photo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/pick_pre_size_bg"
            android:gravity="center"
            android:textColor="@color/pick_white"
            android:textSize="14sp"
            tools:text="1" />

    </FrameLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_weight="1" />

    <Button
        android:id="@+id/tv_pick_photo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="10sp"
        android:gravity="center"
        android:text="@string/share"
        android:textColor="@color/pick_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/tv_share_photo_to_friend"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_marginRight="10sp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/share_to_friend"
        android:textColor="@color/pick_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/tv_share_photo_to_moments"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/share_to_moments"
        android:textColor="@color/pick_gray"
        android:textSize="16sp" />

</LinearLayout>